# auto-mr-docs

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docker-release.yml
auto_mr_docs/: cli.py  config.py  deepseek_api.py  local_model.py  logger.py  main.py  open_ai_api.py
auto_mr_docs/config/: config.py  logger.py
auto_mr_docs/models/: base.py  ollama_summarization.py  openai_summarization.py
auto_mr_docs/services/: factory.py  gitlab_service.py
